@@ -30,7 +30,7 @@ import javax.swing.table.TableCellEditor;
  * </UL>
  *
  * @author			Bob Jacobsen   Copyright (C) 2001
- * @version             $Revision: 1.14 $
+ * @version             $Revision: 1.15 $
  */
 public class ValueEditor extends JComboBox implements TableCellEditor, FocusListener {
     
@@ -103,7 +103,7 @@ public class ValueEditor extends JComboBox implements TableCellEditor, FocusList
         }
         if (mValue instanceof JTextField) {
             // extract the string from the JTextField and return it
-            return new Integer( ((JTextField)mValue).getText() );
+            return Integer.valueOf( ((JTextField)mValue).getText() );
         } else if (mValue instanceof Component) {
             // extract the string from the JTextField and return it
             return mValue;
